Trocado o menu de Div para Main

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <img class="imagem-cafe" src="imagens/fotocafe.jpg" alt="Xicara de café">
 
-<div class="menu">
+<main><!-- Inicio do Menu -->
 
     <section>
         <h2>Bebidas</h2>
@@ -61,7 +61,7 @@
         </div>
     </section>
 
-</div> <!-- .menu -->
+</main> <!-- Final do Menu -->
 
 <footer>
     <p>Tire uma foto e nos marque no Instagram! <strong>@cafedopedro</strong></p>
